Changed to .hpp
Finished majority of output abstraction vconsoles should work.

--- a/.gitignore
+++ b/.gitignore
@@ -340,5 +340,6 @@ __pycache__/
 # By default, sensitive information, such as encrypted password
 # should be stored in the .pubxml.user file.
 
+cmake-build-*
 
 # End of https://www.gitignore.io/api/c++,cmake,visualstudio
