--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,22 @@ platform:
   - x86
   - x64
 
+for:
+  -
+    matrix:
+	  only:
+	    - platform: x86
+	build_script:
+	  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
+  - 
+    matrix:
+      only:
+	    - platform: x64
+	build_script:
+	  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+
+
+
 build_script:
   - md build
   - cd build
