--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: cpp
 
-compiler:
-  - clang
-  - gcc
-
 addons:
   apt:
     sources:
@@ -11,6 +7,37 @@ addons:
     packages:
     - gcc-8
     - g++-8
+    - clang-5.0
+
+matrix:
+ include:
+   - os: linux
+     addons:
+       apt:
+         sources:
+           - ubuntu-toolchain-r-test
+         packages:
+           - gcc-8
+           - g++-8
+     env:
+       - MATRIX_EVAL="CC=gcc-8 & CXX=g++-8"
+   - os: linux
+     addons:
+       apt:
+         sources:
+           - ubuntu-toolchain-r-test
+           - llvm-toolchain-trusty-5.0
+         packages:
+           - clang-5.0
+     env:
+       - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+       
+      
+      
+before_install:
+  - eval "${MATRIX_EVAL}"
+
+
 
 install:
  - |
