--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: cpp
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-    - gcc-8
-    - g++-8
-    - clang-5.0
+compilers:
+  - gcc
+  - clang
 
 matrix:
  include:
