--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
            - gcc-8
            - g++-8
      env:
-       - MATRIX_EVAL="CC=gcc-8 & CXX=g++-8"
+       - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
    - os: linux
      addons:
        apt:
