--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,9 @@ install:
  - |
    CMAKE_URL="https://cmake.org/files/v3.10/cmake-3.10.0-Linux-x86_64.tar.gz"
    mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-   export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+   ls
+   pwd
+   export PATH=/cmake/bin:${PATH}
  - cmake --version
 
 script:
