--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ install:
    mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
    ls
    pwd
-   export PATH=/cmake/bin:${PATH}
+   export PATH=${TRAVIS_BUILD_DIR}/cmake/bin:${PATH}
  - cmake --version
 
 script:
