--- a/rlv3/CMakeLists.txt
+++ b/rlv3/CMakeLists.txt
@@ -3,6 +3,16 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED 1)
+
+if(MSVC)
+add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif()
+
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
+endif()
 
 #
 # Configuration Section
