--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ matrix:
            - ubuntu-toolchain-r-test
            - llvm-toolchain-trusty-5.0
          packages:
+           - gcc-8
+           - g++-8
            - clang-5.0
            - libc++-dev
            - libc++abi-dev
